--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring:
-profiles:
-include: oauth
+spring.profiles.include=oauth
+spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=mdbswls4237@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
