--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 각자 PC에 만들어놓은 Database이름을 써야 합니다.
-    url: jdbc:mysql://127.0.0.1:3306/ft?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     #    mysql에 생성한 사용자 계정 정보를 써야 합니다.
     username: root
-    password: 0823
+    password: mdbswls4237@
   thymeleaf:
     cache: false
 
@@ -17,3 +17,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+
+  # oauth 설정
+  profile:
+    include: oauth
