--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -20,7 +20,9 @@ spring:
 
   # oauth 설정
   profiles:
-    include: oauth
+    include:
+      - oauth
+      - API-KEY
     group:
       "local": "local, jwt, oauth"
     active: local
