[feat] chat-gpt 사용해서 생각해보기 문제 생성하는 기능 구현

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
     include:
       - oauth
       - API-KEY
+      - chatgpt
     group:
       "local": "local, jwt, oauth"
     active: local
