--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     #    mysql에 생성한 사용자 계정 정보를 써야 합니다.
     username: root
     password: 0823
+    autoconfigure:
+      exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
   #  thymeleaf:
   #    cache: false
 
