[fix] application.yml 파일 gitignore에서 삭제

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -2,11 +2,11 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    # 각자 PC에 만들어놓은 Database이름을 써야 합니다.
+    # You must write the database name you created on your PC
     url: jdbc:mysql://127.0.0.1:3306/ft?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    #    mysql에 생성한 사용자 계정 정보를 써야 합니다.
+    # You must write the user account information you created in mysql.
     username: root
-    password: 0823
+    password: 0000
     autoconfigure:
       exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
   #  thymeleaf:
