[refactor] docker 데이터베이스 연결

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # You must write the database name you created on your PC
-    url: jdbc:mysql://127.0.0.1:3306/ft?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3308/fairy-tale-island?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     # You must write the user account information you created in mysql.
     username: root
-    password: 0000
+    password: rootpassword
     autoconfigure:
       exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
   #  thymeleaf:
