[refactor] seed 데이터 삽입 관련 init mode를 never로 수정

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -34,4 +34,4 @@ spring:
   # sql 설정
   sql:
     init:
-      mode: always # 최초 삽입 - always / 이후 - never
+      mode: never # 최초 삽입 - always / 이후 - never
